# zephyr

./: CHANGELOG.md  CODEOWNERS  MAINTAINERS.yml  RELEASE.md  RELEASE_PROCESS.md  dump_eth_regs_all.gdb  vendor.gdb  west.yml
arch/: Kconfig  archs.yml
arch/tricore/: CMakeLists.txt  Kconfig
doc/releases/: migration-guide-4.4.rst
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ifx  adc_ads131m02.c  adc_ifx.c  adc_mspm0_adc12.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.tas2563  tas2563.c  tas2563.h
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.ifx  Kconfig.mcan  can_ifx.c  can_infineon.c  can_mspm0_canfd.c
drivers/charger/: CMakeLists.txt  Kconfig  Kconfig.bq2562x  Kconfig.mp2733  charger_bq2562x.c  charger_bq2562x.h  charger_mp2733.c  (+2 more)
kernel/: Kconfig  idle.c  init.c  sched.c  system_work_q.c
lib/: CMakeLists.txt  Kconfig
modules/: Kconfig  Kconfig.infineon  Kconfig.jsonc  Kconfig.liblightmodbus  Kconfig.libmodbus  Kconfig.libzio  Kconfig.lz4  Kconfig.mspm0  Kconfig.w5500
samples/libmodbus/unit/: CMakeLists.txt  prj.conf
samples/libmodbus/unit/src/: unit-test-client-rtu.c  unit-test-client-tcp.c  unit-test-client.c  unit-test-server-rtu.c  unit-test-tcp.c
soc/infineon/cat1c/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sysbuild  soc.yml  sysbuild.cmake
soc/infineon/cat1c/common/: CMakeLists.txt  Kconfig.defconfig  boot.h  noinit.ld  ram_cm0image.ld  rom_cm0image.ld  smp.c  soc.h  soc_irq.c  soc_m0p.c  soc_m7.c  soc_srom.c  soc_vector_table.c
soc/infineon/cat1c/common/ld/: vector_table.ld
soc/infineon/cat1c/common/m0p/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sysbuild  soc_m0p.c
soc/infineon/cat1c/common/m7/: CMakeLists.txt  Kconfig  soc_m7.c
soc/infineon/cat1c/cyt4bf/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
soc/infineon/cat1c/cyt4dn/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
submanifests/: optional.yaml
(+775 files in other folders)
